crates/amalgam-parser/tests/snapshots/snapshot_test__arrays_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: content
---
let metav1 = import "../../k8s_io/apimachinery.pkg.apis/meta/v1/mod.ncl" in

Arrays = {
  metadata
    | metav1.ObjectMeta
    | optional,
  spec
    | {
    configs
      | Array {
      name
        | String
        | optional,
      value
        | String
        | optional
    }
      | optional,
    items
      | Array String
      | optional
  }
    | optional
}
