crates/amalgam-parser/tests/snapshots/snapshot_test__multi_version_all.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: all_versions
---
{
  spec | optional | {
    field1 | optional | String
  }
}
{
  spec | optional | {
    field1 | optional | String,
    field2 | optional | Number
  }
}
{
  metadata | optional | objectMeta.ObjectMeta,
  spec | optional | {
    field1 | optional | String,
    field2 | optional | Number,
    field3 | optional | Bool
  }
}
