crates/amalgam-parser/tests/snapshots/snapshot_test__multiple_k8s_refs_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
assertion_line: 68
expression: content
---
# Module: MultiRef.v1.test.io

{
  MultiRef = {
    metadata | optional | io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta,
    spec | optional | {
      resources | optional | Dyn,
      selector | optional | Dyn,
      volumes | optional | Array Dyn,
    },
  },
}
