crates/amalgam-parser/tests/snapshots/snapshot_test__nested_objects_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: generated
---
Nested = {
  spec
    | {
    config
      | {
      cache
        | {
        ttl
          | Number
          | optional
      }
        | optional,
      database
        | {
        host
          | String
          | optional,
        port
          | Number
          | optional
      }
        | optional
    }
      | optional
  }
    | optional
}
