crates/amalgam-parser/tests/snapshots/snapshot_test__package_structure_main.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
assertion_line: 152
expression: main_module
---
# test-package - Kubernetes CRD types
# Auto-generated by amalgam
# Structure: group/version/kind

{
  test_io = import "./test.io/mod.ncl",
}
