crates/amalgam-parser/tests/snapshots/snapshot_test__simple_crd_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: generated
---
let metav1 = import "../../k8s_io/apimachinery.pkg.apis/meta/v1/mod.ncl" in

Simple = {
  metadata
    | metav1.ObjectMeta
    | optional,
  spec
    | {
    name
      | String
      | optional
  }
    | optional
}
