crates/amalgam-parser/tests/snapshots/snapshot_test__simple_with_k8s_imports.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: content
---
{
  metadata | optional | objectMeta.ObjectMeta,
  spec | optional | {
    name | optional | String
  }
}
