crates/amalgam-parser/tests/snapshots/snapshot_test__validation_nickel.snap
---
source: crates/amalgam-parser/tests/snapshot_test.rs
expression: generated
---
{
  metadata
     | v1Module.ObjectMeta
     | optional,
  spec
     | {
    image
       | String,
    port
       | Number
       = 8080,
    replicas
       | Number
  }
}
